# Rust-ezytutors-CH08

./: .gitignore  Cargo.toml  README.md  bacon-analysis.json  bacon.toml  ezytutors.session.sql
tutor-web-app-ssr/: .gitignore  Cargo.toml  package-lock.json  package.json
tutor-web-app-ssr/.sqlx/: query-8c5f318cc81728a42e672a6318e3fd720d1bbff4d307a1a0bf3bffd9872c423c.json  query-bd6b46c1d09391b907576ae674778cec9e7a4d984ae3109115dc6dff09035bf0.json
tutor-web-app-ssr/src/iter5/: dbaccess.rs  errors.rs  handler.rs  model.rs  routes.rs
tutor-web-app-ssr/src/iter5/dbscripts/: user.sql
tutor-web-app-ssr/static/: static-web-page.html  style.css  tutor-styles.css
tutor-web-app-ssr/static/iter1/: index.html
tutor-web-app-ssr/static/iter2/: form.html  user.html
tutor-web-app-ssr/static/iter3/: list.html
tutor-web-app-ssr/static/iter4/: list.html
tutor-web-app-ssr/static/iter5/: register.html
tutor-web-service/: Cargo.toml  iter3-test-clean.sql
tutor-web-service/src/iter5/: errors.rs  routes.rs
tutor-web-service/src/iter5/dbaccess/: course.rs
tutor-web-service/src/iter5/dbscripts/: course.sql  tutor-course.sql
tutor-web-service/src/iter5/handlers/: course.rs  general.rs  tutor.rs
tutor-web-service/src/iter5/models/: course.rs  tutor.rs
