[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
awc = { version = "3.6.0", features = ["openssl"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"

[dev-dependencies]
actix-rt = "2.10.0"
