[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
awc = { version = "3.6.0", features = ["openssl"] }
dotenv = "0.15.0"
rust-argon2 = "2.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio-native-tls",
  "macros",
  "chrono",
] }
tera = "1.20.0"

[dev-dependencies]
actix-rt = "2.10.0"
